discussion/kv_engine/126024/126024_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Privilege based visibility for get_scope/collection id

Still needs tweaking and cleaning (some cerr stuff)

Tests to check returned uid...

Change-Id: I4a20c791284a12d66741254da006541f923362e7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-20 08:18:11.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 09:33:18.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27611/ : FAILURE

Failure of a CTest test 171/384 Test #157: ep-engine_ep_unit_tests.AllBucketTypes/ActiveDurabilityMonitorTest ............................................................ ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27611/ )

Failure of a GoogleTest test:

AllBucketTypes/ActiveDurabilityMonitorTest.DurabilityImpossible_1Replica/ephemeral_fail_new_data, where GetParam() = ("ephemeral", "fail_new_data") (4 ms) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27611/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1783/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2: error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
#error "Please include memcached/engine.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2211:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetCollectionIDPayload(uint64_t manifestId)
    ^
    explicit 
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/protocol_binary.h:2238:5: warning: single-argument constructors must be marked explicit to avoid unintentional implicit conversions [google-explicit-constructor]
    GetScopeIDPayload(uint64_t manifestId) : manifestId(htonll(manifestId)) {
    ^
    explicit 

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1783/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/collections.h:20:2:
error: "Please include memcached/engine.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1783/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2258/ : FAILURE

Failure of a CTest test [2020-04-20T08:39:39.480Z] 314/398 Test #318: memcached_testapp.default.TransportProtocols/InterfacesTest ................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2258/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/302/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23611/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3197/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3277/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11066/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3215/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
